--- a/xinx/ui/welcomdlg.ui
+++ b/xinx/ui/welcomdlg.ui
@@ -65,13 +65,6 @@
         </property>
        </widget>
       </item>
-      <item row="3" column="0">
-       <widget class="QPushButton" name="m_createNewProjectBtn">
-        <property name="text">
-         <string>Create New Project...</string>
-        </property>
-       </widget>
-      </item>
       <item row="4" column="0">
        <spacer name="verticalSpacer">
         <property name="orientation">
@@ -104,6 +97,20 @@
         </property>
         <property name="verticalScrollMode">
          <enum>QAbstractItemView::ScrollPerPixel</enum>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QPushButton" name="m_createNewProjectBtn">
+        <property name="text">
+         <string>Create New Project...</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0">
+       <widget class="QPushButton" name="m_openProjectBtn">
+        <property name="text">
+         <string>&amp;Open Existing Project ...</string>
         </property>
        </widget>
       </item>
