CVS plugin customization

--- a/plugins/cvsplugin/cvsplugin.qrc
+++ b/plugins/cvsplugin/cvsplugin.qrc
@@ -1,6 +1,7 @@
 <RCC>
     <qresource prefix="/" >
         <file>images/hi32-app-cervisia.png</file>
+        <file>images/hi64-app-cervisia.png</file>
 	<file>translations/cvsplugin_fr.qm</file>
     </qresource>
 </RCC>
