--- a/plugins/generix/ui/dictionarydockwidget.ui
+++ b/plugins/generix/ui/dictionarydockwidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>242</width>
+    <height>345</height>
    </rect>
   </property>
   <property name="allowedAreas">
@@ -18,14 +18,37 @@
   </property>
   <widget class="QWidget" name="dockWidgetContents">
    <layout class="QVBoxLayout" name="verticalLayout">
-    <property name="spacing">
-     <number>0</number>
-    </property>
-    <property name="margin">
-     <number>0</number>
-    </property>
     <item>
-     <widget class="QComboBox" name="m_dictionaryList"/>
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <widget class="QComboBox" name="m_dictionaryList"/>
+      </item>
+      <item>
+       <widget class="QToolButton" name="m_addToDico">
+        <property name="text">
+         <string>...</string>
+        </property>
+        <property name="icon">
+         <iconset resource="../../../components/xinxpluginselector.qrc">
+          <normaloff>:/images/add.png</normaloff>:/images/add.png</iconset>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QToolButton" name="m_updateBase">
+        <property name="text">
+         <string>...</string>
+        </property>
+        <property name="icon">
+         <iconset resource="../../../components/xinxpluginselector.qrc">
+          <normaloff>:/images/up.png</normaloff>:/images/up.png</iconset>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item>
+     <widget class="XinxLineEdit" name="m_filterLine"/>
     </item>
     <item>
      <widget class="QTreeView" name="m_dictionaryTreeView"/>
@@ -33,6 +56,15 @@
    </layout>
   </widget>
  </widget>
- <resources/>
+ <customwidgets>
+  <customwidget>
+   <class>XinxLineEdit</class>
+   <extends>QLineEdit</extends>
+   <header location="global">xinxlineedit.h</header>
+  </customwidget>
+ </customwidgets>
+ <resources>
+  <include location="../../../components/xinxpluginselector.qrc"/>
+ </resources>
  <connections/>
 </ui>
