--- a/plugins/generix/ui/dictionarydockwidget.ui
+++ b/plugins/generix/ui/dictionarydockwidget.ui
@@ -18,6 +18,9 @@
   </property>
   <widget class="QWidget" name="dockWidgetContents">
    <layout class="QVBoxLayout" name="verticalLayout">
+    <property name="margin">
+     <number>0</number>
+    </property>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
@@ -52,6 +55,13 @@
     </item>
     <item>
      <widget class="QTreeView" name="m_dictionaryTreeView"/>
+    </item>
+    <item>
+     <widget class="QLabel" name="m_informationLbl">
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
